--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: white;
+    background-color: hsl(170, 100%, 6%);
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -11,8 +11,8 @@ h1, h2, h3 {
     margin: 0%;
 }
 #container {
-    background-color: white;
-    width: 800px;
+    background-color: rgb(237, 40, 40);
+    width: max-content
     margin-left: auto;
     margin-right: auto;
 }
